Fix spacing for social links in footer

--- a/source/stylesheets/footer.css.scss
+++ b/source/stylesheets/footer.css.scss
@@ -92,7 +92,7 @@ footer {
       a {
         @include hide-text;
         display: block;
-        width: 50px;
+        width: 56px;
       }
 
       @include social-background-images(rdw, blw);
